Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-41165

Collections: Prepares don't count towards collection disk size (they should)

    XMLWordPrintable

Details

    • Triaged
    • 1
    • Unknown
    • KV-Engine Sprint 2020-Dec, KV-Engine 2021-Jan

    Description

      When a prepare is flushed, we skip updating the owning collection's disk-size stat. Given that a prepare could be of the maximum document size (20Mb) a user could quickly use disk space, but have no idea which collection is using that space.

      Fixing this primarily requires changes in compaction, where prepares are purged from the system and we would need to decrement collection disk-sizes for each purged prepare.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty